# FreeWatchSW

./: .gitignore  README.md  runSesh.sh  setupEnv.sh
c-example/: CMakeLists.txt  build.sh  main.c
c-example/bild/: CMakeCache.txt  Makefile  cmake_install.cmake  main.dis  main.elf  main.elf.map  main.hex  main.uf2
c-example/bild/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
c-example/bild/elf2uf2/boot_uf2_headers/: Makefile
c-example/bild/examples/: Makefile  cmake_install.cmake
c-example/bild/freeWatch/: Makefile  cmake_install.cmake
c-example/bild/lib/Config/: Makefile  cmake_install.cmake
c-example/bild/lib/Fonts/: Makefile  cmake_install.cmake
c-example/bild/lib/GUI/: Makefile  cmake_install.cmake
c-example/bild/lib/LCD/: Makefile  cmake_install.cmake
c-example/bild/lib/QMI8658/: Makefile  cmake_install.cmake
c-example/bild/lib/Touch/: Makefile  cmake_install.cmake
c-example/bild/pico-sdk/: Makefile  cmake_install.cmake
c-example/bild/pico-sdk/docs/: Makefile
c-example/bild/pico-sdk/src/: Makefile  cmake_install.cmake
c-example/bild/pico-sdk/src/common/: Makefile  cmake_install.cmake
c-example/bild/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
c-example/bild/pico-sdk/tools/: Makefile
c-example/bild/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
c-example/freeWatch/: .GPS.c.swp  .screens.c.swp  CMakeLists.txt  GPS.c  GPS.h  buttons.c  buttons.h  colors.c  colors.h  ext_i2c.c  ext_i2c.h  information.c  information.h  mcp23008.c  mcp23008.h  minmea.c  rtc.c  rtc.h  screens.c  screens.h
(+86 files in other folders)
